Fix iphone image overlapping text

--- a/src/assets/stylesheets/_heros.scss
+++ b/src/assets/stylesheets/_heros.scss
@@ -102,7 +102,7 @@
   margin-bottom: 40px;
   padding: 0;
   position: absolute;
-  transform: translate(0, -50px) scale(0.9);
+  transform: translate(52vw, -50px) scale(0.9);
 }
 
 @media (max-width: $screen-sm-min) {
